# I2A2_Agents

./: .gitignore  agent.py  datasets.py  main.py  preprocessing.py  readme.md  schemas.py
I2A2_agents_pydantic_task_NFs/: .env.template  Dockerfile  datasets.py  pyproject.toml
I2A2_agents_pydantic_task_NFs/.devcontainer/: devcontainer.json
