[project]
name = "I2A2_Agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "pydantic-ai (>=0.2.18,<0.3.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.86.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "groq (>=0.28.0,<0.29.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community[pandas] (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.65,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "langchain-openai (>=0.3.23,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
